--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
   "dependencies": {
     "assemble": "^0.24.3",
     "assemble-midden": "^0.4.1",
+    "assemble-middleware-md": "^0.1.0",
+    "assemble-permalinks": "^0.6.1",
     "base-search": "^0.1.1",
     "base-watch": "^0.1.3",
     "browser-sync": "^2.18.13",
     "cheerio": "^1.0.0-rc.2",
     "fs-exists-sync": "^0.1.0",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-extname": "^0.2.2",
+    "gulp-sass": "^3.1.0",
     "jquery": "^3.2.1",
     "lunr": "^2.1.5",
     "write": "^1.0.3",
